feat: implement basic working

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+.body {
+  width: 480px;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem 1rem;
   text-align: center;
 }
-
