--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,22 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  width: 720px;
+  width: 600px;
 }
 
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem 1rem;
   text-align: center;
+}
+
+.header {
+  color: #FFF;
+  font-weight: bold;
+  text-align: left;
+  font-size: 24px;
+  padding: 0 20px;
 }
