--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: monospace;
 }
 
 body {
@@ -19,4 +20,10 @@ body {
   text-align: left;
   font-size: 24px;
   padding: 0 20px;
+  color: #1677ff;
+  height: 42px;
+  display: flex;
+  align-items: center;
+  background-color: #ffffff;
+  background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
 }
